@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2022-10-03T02:07:43Z",
+  "timestamp" : "2022-10-03T08:35:18Z",
   "count_outdated" : 530,
   "uniques_outdated" : 338,
-  "count" : 560,
-  "uniques" : 359,
+  "count" : 559,
+  "uniques" : 358,
   "clones" : [
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 2,
+      "count": 1,
       "count_minmax": [ 1, 2 ],
-      "uniques": 2,
+      "uniques": 1,
       "uniques_minmax": [ 1, 2 ]
     },
     {
