@@ -1,11 +1,11 @@
 {
-  "count": 30,
+  "count": 29,
   "uniques": 2,
   "clones": [
     {
       "timestamp": "2022-09-19T00:00:00Z",
-      "count": 2,
-      "uniques": 2
+      "count": 1,
+      "uniques": 1
     },
     {
       "timestamp": "2022-09-20T00:00:00Z",
