@@ -1,3 +1,11 @@
+2022-10-03T08:35:18Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3172725249
+* notice: last 14d: unq all: 2 29
+* notice: prev accum: outdated-unq outdated-all / unq all: 338 530 / 359 560
+* notice: next accum: outdated-unq outdated-all / unq all: 338 530 / 358 559
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -1 -1 / +2 +2 -1 -1 / 1 1
+* notice: removed / changed dates: [] / [2022-09-19]
+
 2022-10-03T02:07:43Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/3171040573
 * notice: last 14d: unq all: 2 30
